--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>React App Setup</title>
-  </head>
-  <body>
-    <div id="root">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>To-Do</title>
+</head>
+<body>
+    <script src="./App.js"></script>
 
-    </div>
-    <script src="./index.js"></script>
-  </body>
+
+</body>
 </html>
